# lanjing

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc.js  .prettierignore  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  _typos.toml  components.json  deny.toml  eslint.config.js  package.json  pnpm-workspace.yaml  prettier.config.js  vite.config.js
.cargo/: config.toml
.changeset/: README.md  fair-paws-allow.md
.config/: nextest.toml
.husky/: commit-msg  pre-commit
messages/: en.json  zh-CN.json
project.inlang/: settings.json
src/: app.html  hooks.server.ts  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .source-icon.sha256  icon.icns
src-tauri/locales/: en-US.yml  zh-CN.yml
src-tauri/src/: lib.rs  main.rs
src/lib/: i18n.ts
src/lib/app/: AppShell.svelte  ModeShell.svelte
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/input/: index.ts  input.svelte
src/lib/components/ui/label/: index.ts  label.svelte
src/lib/components/ui/separator/: index.ts  separator.svelte
src/lib/components/ui/sonner/: Toaster.svelte  index.ts
src/lib/components/ui/textarea/: index.ts  textarea.svelte
src/lib/config/: app.ts
src/lib/stores/: theme.svelte.ts
src/routes/: +layout.svelte  +page.svelte
static/: site.webmanifest
